welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value i
var j = nums(i+2)
             ^